--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,14 +17,14 @@ jobs:
           - name: linux
             os: ubuntu-latest
             executable: yap
-            artifact_name: target/release/yap
-            asset_name: yap-Linux-x86_64.zip
+            artifact_name: target/release/release-test
+            asset_name: release-test-Linux-x86_64.zip
 
           - name: macos
             os: macos-latest
             executable: yap
-            artifact_name: target/release/yap
-            asset_name: yap-MacOS-x86_64.zip
+            artifact_name: target/release/release-test
+            asset_name: release-test-MacOS-x86_64.zip
 
     steps:
       - uses: actions/checkout@v1
