--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,7 +43,8 @@ jobs:
           type: 'zip'
           path: ${{ matrix.executable }}
           filename: ${{ matrix.asset_name }}
-
+      - name: Set env
+        run: echo "VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       - name: Upload Release
         # uses: "marvinpinto/action-automatic-releases@latest"
         # with:
@@ -52,7 +53,8 @@ jobs:
         # 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          VERSION:  ${{ needs.draft_release.outputs.tag_name }}
+          # VERSION:  ${{ needs.draft_release.outputs.tag_name }}
         run: |
+          echo $VERSION
           gh release upload --clobber ${{ env.VERSION }} ${{ matrix.asset_name }}
 
