Add release code.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,13 @@ on:
     tags:
       - "*"
 
-jobs:
+create:
+  name: Create Release
+  run: |
+   echo "VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+   gh release create $VERSION
+
+build:
   publish:
     name: Release for ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
@@ -56,6 +62,5 @@ jobs:
           # VERSION:  ${{ needs.draft_release.outputs.tag_name }}
         run: |
           echo $VERSION
-          gh release create $VERSION
           gh release upload --clobber ${{ env.VERSION }} ${{ matrix.asset_name }}
 
