--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,13 +5,12 @@ on:
     tags:
       - "*"
 
-create:
-  name: Create Release
-  run: |
-   echo "VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-   gh release create $VERSION
-
-build:
+jobs:
+  create:
+    name: Create Release
+    run: |
+      echo "VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+      gh release create $VERSION
   publish:
     name: Release for ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
