--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
           args: --release
 
       - name: Compress release
-        run: tar zcvf release-test.tar.gz -C target/release/release-test
+        run: tar zcvf release-test.tar.gz -C target/release release-test
 
       - name: Upload release
         uses: svenstaro/upload-release-action@v1-release
@@ -57,13 +57,13 @@ jobs:
           args: --release --target x86_64-unknown-linux-musl
 
       - name: Compress
-        run: tar zcvf release-test.tar.gz -C target/release/release-test
+        run: tar zcvf release-test.tar.gz -C target/release release-test
 
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v1-release
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: camilladsp.tar.gz
+          file: release-test.tar.gz
           asset_name: release-test-Linux-musl-x86_64.tar.gz
           tag: ${{ github.ref }}
 
@@ -95,7 +95,7 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: release-test.zip
-          asset_name: camilladsp-windows-amd64.zip
+          asset_name: release-test-windows-x86_64.zip
           tag: ${{ github.ref }}
 
   macos:
@@ -125,7 +125,7 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: release-test.tar.gz
-          asset_name: camilladsp-macos-amd64.tar.gz
+          asset_name: release-test-macOS-x86_64.tar.gz
           tag: ${{ github.ref }}
 
 
@@ -154,13 +154,13 @@ jobs:
           DEVELOPER_DIR: /Applications/Xcode_12.4.app
 
       - name: Compress
-        run: tar -zcvf release-test.tar.gz -C target/aarch64-apple-darwin/release/release-test
+        run: tar -zcvf release-test.tar.gz -C target/aarch64-apple-darwin/release release-test
 
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v1-release
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: camilladsp.tar.gz
+          file: release-test.tar.gz
           asset_name: release-test-macOS-ARM64.tar.gz
           tag: ${{ github.ref }}
 
