--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -148,10 +148,10 @@ jobs:
         with:
           command: build
           args:  --release --target aarch64-apple-darwin
-        env:
-          SDKROOT: /Applications/Xcode_12.4.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX11.1.sdk
-          MACOSX_DEPLOYMENT_TARGET: 11.1
-          DEVELOPER_DIR: /Applications/Xcode_12.4.app
+        # env:
+        #   SDKROOT: /Applications/Xcode_12.4.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX11.1.sdk
+        #   MACOSX_DEPLOYMENT_TARGET: 11.1
+        #   DEVELOPER_DIR: /Applications/Xcode_12.4.app
 
       - name: Compress
         run: tar -zcvf release-test.tar.gz -C target/aarch64-apple-darwin/release release-test
