--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -161,6 +161,6 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: release-test.tar.gz
-          asset_name: release-test-Windows-x86_64.tar.gz
+          file: release-test.zip
+          asset_name: release-test-Windows-x86_64.zip
           tag: ${{ github.ref }}
