--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,7 +45,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
           profile: minimal
           toolchain: stable
@@ -53,7 +53,7 @@ jobs:
           override: true
 
       - name: Build
-        uses: actions-rs/cargo@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
           command: build
           args: --release --target x86_64-unknown-linux-musl
@@ -174,11 +174,14 @@ jobs:
 
       - name: Install toolchain
         uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: arm-linux-androideabi
 
       - name: Build
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: arm-linux-androideabi
+          args: --release --target arm-linux-androideabi
 
       - name: Compress release
         run: tar czvf release-test.tar.gz -C target/arm-linux-androideabi/release release-test
