--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -193,3 +193,28 @@ jobs:
           file: release-test.zip
           asset_name: release-test-Windows-x86_64.zip
           tag: ${{ github.ref }}
+  
+  windows_arm:
+    name: Windows arm64
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@v3
+      
+      - name: Build
+        uses: houseabsolute/actions-rust-cross@v0
+        with:
+          command: both
+          target: aarch64-pc-windows-msvc
+          args: --release
+
+      - name: Compress release
+        run: tar czvf segul.tar.gz -C target/aarch64-pc-windows-msvc/release segul.exe
+
+      - name: Upload release
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: segul.zip
+          asset_name: segul-Windows-arm64.tar.gz
+          tag: ${{ github.ref }}
